--- a/numpy_1ddft_cn.ipynb
+++ b/numpy_1ddft_cn.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numpy 一维-DFT\n",
+    "# Numpy 一维DFT\n",
     "\n",
     "## 理论背景\n",
     "\n",
@@ -181,14 +181,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "可以看到结果符合三角函数的性质，将D和D2两个算符作用到函数上，确实得到了它的一阶而二阶导数"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "可以看到结果符合三角函数的性质，将$D$和$D^2$两个算符作用到函数上，确实得到了它的一阶而二阶导数\n",
+    "\n",
     "我们可以先不管势能项，试试看只有动能项的时候（自由电子）KS方程求解出来会是什么样子\n",
     "\n",
     "注：在量子力学中，所有可观测物理量 $A$ 都有一个对应的算符 $\\hat{A}$，代表作用于波函数的一种运算。\n",
