--- a/numpy_1ddft_cn.ipynb
+++ b/numpy_1ddft_cn.ipynb
@@ -9,19 +9,37 @@
     "\n",
     "## 理论背景\n",
     "\n",
-    "物质在纳米尺度的物化性质必须考虑量子效应。量子力学用薛定谔方程描述物理体系，计算复杂度随电子数量快速上升。DFT大幅降低了计算量（将多电子体系的薛定谔方程转化成单电子形式KS方程，将精度损失全部归入交换关联泛函），使得数值计算纳米材料成为可能。\n",
+    "物质在纳米尺度的物化性质必须考虑量子效应。量子力学用薛定谔方程描述物理体系，计算复杂度随电子数量快速上升：\n",
     "\n",
-    "KS方程聚焦体系能量和电子密度的关系，二者一一对应（其他物理性质在求出这两项后可另行导出）。在量子力学中，能量与哈密顿量（算符）对应，而电子密度与波函数对应。问题归结为如何正确写出作用在体系波函数上的哈密顿量并求解KS方程\n",
+    "$$\n",
+    "\\hat{H} \\Psi=[\\hat{T}+\\hat{V}+\\hat{U}] \\Psi=\\left[\\sum_{i=1}^N\\left(-\\frac{\\hbar^2}{2 m_i} \\nabla_i^2\\right)+\\sum_{i=1}^N V\\left(\\mathbf{r}_i\\right)+\\sum_{i<j}^N U\\left(\\mathbf{r}_i, \\mathbf{r}_j\\right)\\right] \\Psi=E \\Psi \\tag{1}\n",
+    "$$\n",
+    "\n",
+    "DFT大幅降低了计算量（将多电子体系的薛定谔方程转化成单电子形式KS方程，将精度损失全部归入交换关联泛函），使得通过数值计算分析纳米材料物化性质成为可能。\n",
+    "\n",
+    "$$\n",
+    "\\left[-\\frac{\\hbar^2}{2 m} \\nabla^2+V_{\\mathrm{s}}(\\mathbf{r})\\right] \\varphi_i(\\mathbf{r})=\\varepsilon_i \\varphi_i(\\mathbf{r}) \\tag{2}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "n(\\mathbf{r})=\\sum_{i=1}^N\\left|\\varphi_i(\\mathbf{r})\\right|^2 \\tag{3}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "V_{\\mathrm{s}}(\\mathbf{r})=V(\\mathbf{r})+\\int \\frac{n\\left(\\mathbf{r}^{\\prime}\\right)}{\\left|\\mathbf{r}-\\mathbf{r}^{\\prime}\\right|} \\mathrm{d}^3 \\mathbf{r}^{\\prime}+V_{\\mathrm{XC}}[n(\\mathbf{r})] \\tag{4}\n",
+    "$$\n",
+    "\n",
+    "KS方程聚焦体系能量和电子密度的关系，二者一一对应（原则上，其他物化性质在求出这两项后可另行导出）。在量子力学中，能量与哈密顿量（算符）对应，而电子密度与波函数对应。问题归结为如何正确写出作用在体系波函数上的哈密顿量并求解KS方程（更多细节请阅读 [wiki](https://en.wikipedia.org/wiki/Density_functional_theory) 或相关书籍）。\n",
     "\n",
     "## 代码概述\n",
     "\n",
-    "- 参考文献: http://dcwww.camd.dtu.dk/~askhl/files/python-dft-exercises.pdf\n",
-    "- 目标: 针对谐振子，考虑动能、静电势、LDA，忽略关联项；写出这种情况下体系的KS方程并求解\n",
+    "- 理论部分见[此PDF](./Larsen_Lyon_Theory.pdf)\n",
+    "- 目标: 针对一维谐振子，考虑动能、静电势、LDA，忽略关联项；写出这种情况下体系的KS方程并求解\n",
     "\n",
-    "根据KS方程（简化版薛定谔方程）通用形式，哈密顿量由 动能和势能 组成，而且势能包含 外部势（谐振子为$x^2$）、电子库伦势（Hartree）和电子交互关联势（用LDA势近似）\n",
+    "根据KS方程通用形式，哈密顿量由 动能和势能 组成，而且势能包含 外部势（谐振子为$x^2$）、电子库伦势（Hartree）和电子交互关联势（用LDA势近似）\n",
     "\n",
-    "$$\\hat{H}=-\\frac{1}{2}\\frac{d^2}{dx^2}+v(x)\\\\\n",
-    "v(x)=v_{Hartree}(x)+v_{LDA}(x)+x^2$$\n",
+    "$$\\hat{H}=-\\frac{1}{2}\\frac{d^2}{dx^2}+v_s(x)\\\\\n",
+    "v_s(x)=x^2+v_{Hartree}(x)+v_{LDA}(x)$$\n",
     "\n",
     "接下来要将上述通用形式写成具体的数值形式，并求解方程\n",
     "\n",
